--- a/it.ltc.corrieri.brt/pom.xml
+++ b/it.ltc.corrieri.brt/pom.xml
@@ -100,8 +100,8 @@
 			<version>1.2.17</version>
 		</dependency>
 		<dependency>
-			<groupId>it.ltc.utility.miscellanea</groupId>
-			<artifactId>it.ltc.utility.miscellanea</artifactId>
+			<groupId>it.ltc.utility</groupId>
+			<artifactId>miscellanea</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
