--- a/it.ltc.corrieri.brt.importazionefile/pom.xml
+++ b/it.ltc.corrieri.brt.importazionefile/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>it.ltc.corrieri</groupId>
 	<artifactId>brt.importazionefile</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 
 	<properties>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -14,14 +14,14 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>it.ltc.database.model</groupId>
-			<artifactId>centrale</artifactId>
+			<groupId>it.ltc.database</groupId>
+			<artifactId>model-centrale</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>it.ltc.database</groupId>
-			<artifactId>configuration</artifactId>
-			<version>0.1</version>
+			<artifactId>dao</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 </project>
