--- a/it.ltc.corrieri.inviofile/pom.xml
+++ b/it.ltc.corrieri.inviofile/pom.xml
@@ -33,13 +33,13 @@
   		<version>1.2.17</version>
   	</dependency>
   	<dependency>
-  		<groupId>it.ltc.utility.mail</groupId>
-  		<artifactId>it.ltc.utility.mail</artifactId>
+  		<groupId>it.ltc.utility.configuration</groupId>
+  		<artifactId>it.ltc.utility.configuration</artifactId>
   		<version>1.0</version>
   	</dependency>
   	<dependency>
-  		<groupId>it.ltc.utility.configuration</groupId>
-  		<artifactId>it.ltc.utility.configuration</artifactId>
+  		<groupId>it.ltc.utility</groupId>
+  		<artifactId>mail</artifactId>
   		<version>1.0</version>
   	</dependency>
   </dependencies>
