--- a/it.ltc.corrieri.brt/src/main/resources/settings.properties
+++ b/it.ltc.corrieri.brt/src/main/resources/settings.properties
@@ -1,8 +1,8 @@
 #Path
-path_cartella=E:/ftpserver/bartolini/in/
-path_cartella_storico=E:/ftpserver/bartolini/in/storico/
-path_cartella_errori=E:/ftpserver/bartolini/in/errori/
-path_cartella_check=E:/ftpserver/bartolini/in/controllo/
+path_cartella=//192.168.0.10/ftpserver/bartolini/IN/
+path_cartella_storico=//192.168.0.10/ftpserver/bartolini/IN/storico/
+path_cartella_errori=//192.168.0.10/ftpserver/bartolini/IN/errori/
+path_cartella_check=//192.168.0.10/ftpserver/bartolini/IN/controllo/
 #Path di test
 test_path_cartella=C:/Users/Damiano/Desktop/esiti/BRT/
 test_path_cartella_storico=C:/Users/Damiano/Desktop/esiti/BRT/storico/
@@ -12,8 +12,8 @@ test_path_cartella_check=C:/Users/Damiano/Desktop/esiti/BRT/controllo/
 persistence_unit_name=produzione
 test_persistence_unit_name=test
 #email
-email_mittente_indirizzo=ced.ltclogistics.it@gmail.com
-email_mittente_password=MtCm.$14
+email_mittente_indirizzo=sysinfo@ltc-logistics.it
+email_mittente_password=ltc10183
 email_destinatari_indirizzi=traffic@ltc-logistics.it
 email_destinatari_responsabili_indirizzi=damiano.bellucci@ltc-logistics.it
 #varie
