--- a/it.ltc.corrieri.brt/src/main/resources/log4j.properties
+++ b/it.ltc.corrieri.brt/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=ALL, file, stdout
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=E\:/ftpserver/bartolini/java/logImportazioneEsitiBartolini.log
+log4j.appender.file.File=E:\\servizi\\brt\\logImportazioneEsitiBartolini.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.Threshold=INFO
@@ -17,5 +17,5 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 #Hibernate
+log4j.logger.com.mchange.v2=WARN
 log4j.logger.org.hibernate=WARN
-log4j.logger.org.hibernate.type=ALL
